github_data_collector/src/data/issue_comment/seetafaceengine_SeetaFace2.txt
MinGW does not have the _MSC_VER macro .
```
SeetaFace2/SeetaNet/src/orz/tools/box.cpp:136:5: error: 'localtime_r' was not declared in this scope; did you mean 'localtime_s'?
  136 |     localtime_r(&from, &to);
      |     ^~~~~~~~~~~
```
作者这里的pitch,yaw,roll的计算居然没有用到3D模型。用的是向量算法。但是有一个地方没有明白是angle = rad * 180 * M_PI;这里弧独角转换怎么可能同时出现乘以180和派呢？太匪夷所思了！希望高明的人讲解一下。谢谢！
检测的精度和速度还是挺快的，但是识别的精度差的太远了。有没有相关对齐的模型或者源码参考一下呢？

到运行例子那一步 ./points81 是什么意思啊
也没有这个文件啊
程序可以支持gpu吗?
我是在linux下编译的，已经编译成功了，检测彩色图的时候能够准确的识别出来，但同样的图片变成黑白图的时候就检测不出来了
你好，
我测试你们人脸检测的模块，发现速度没有达到你们说的那么快，请问一下是有那边需要设置吗？下面是我测试环境和结果：

vs2015编译的cpu版本，
图片胡歌那张resize到1920*1080，
最小脸40
**硬件：I7-4790 3.6GHz 平均用时60ms
          I7-8700 3.2GHz 平均用时40ms**
和你们说的70FPS 差距太大了，期待你们的回复。

请问， 源码中人脸数据库 FDB 是一个内存数据库吗？  怎么存成持久化的数据？
头只要稍微歪一点，就识别不到了，必须端端正正的才能识别到，这个问题能解决吗，现在这样完全不行啊